--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
-    <RootNamespace>Uzgoto.DotNetSnipet.Convertor</RootNamespace>
+    <RootNamespace>Uzgoto.DotNetSnipet</RootNamespace>
     <Authors>uzgoto</Authors>
     <AssemblyVersion>0.0.0.1</AssemblyVersion>
   </PropertyGroup>
