--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -35,6 +35,8 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -48,6 +50,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Sample\Program.cs" />
+    <Compile Include="WinForms\SampleDialog.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
