--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -50,6 +50,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Sample\Program.cs" />
+    <Compile Include="WinForms\InterProc\Helper.cs" />
+    <Compile Include="WinForms\InterProc\ProcessArgumentAttribute.cs" />
     <Compile Include="WinForms\SampleDialog.cs" />
   </ItemGroup>
   <ItemGroup>
