--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -52,10 +52,10 @@
     <Compile Include="Sample\Program.cs" />
     <Compile Include="WinForms\InterProc\Helper.cs" />
     <Compile Include="WinForms\InterProc\ProcessArgumentAttribute.cs" />
-    <Compile Include="WinForms\Validators\Validator.cs">
+    <Compile Include="WinForms\Interceptors\Validator.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WinForms\Validators\ValidatorAttribute.cs" />
+    <Compile Include="WinForms\Interceptors\ValidatorAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
