some member move to Interceptor class

--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -58,6 +58,7 @@
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="WinForms\Interceptors\InterceptAttribute.cs" />
+    <Compile Include="WinForms\Interceptors\Interceptor.cs" />
     <Compile Include="WinForms\Interceptors\Sanitizers\InputType.cs" />
     <Compile Include="WinForms\InterProc\Helper.cs" />
     <Compile Include="WinForms\InterProc\ProcessArgumentAttribute.cs" />
