--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\Repository.cs" />
     <Compile Include="Sample\Program.cs" />
+    <Compile Include="WinForms\Extensions\WinFormsExtensions.cs" />
     <Compile Include="WinForms\Interceptors\BaseForm.cs">
       <SubType>Form</SubType>
     </Compile>
