--- a/DotNetSnipet/DotNetSnipet.csproj
+++ b/DotNetSnipet/DotNetSnipet.csproj
@@ -59,14 +59,16 @@
       <DependentUpon>BaseForm.cs</DependentUpon>
     </Compile>
     <Compile Include="WinForms\Interceptors\IInterceptor.cs" />
-    <Compile Include="WinForms\Interceptors\InterceptEventAttribute.cs" />
+    <Compile Include="WinForms\Interceptors\InterceptAttribute.cs" />
     <Compile Include="WinForms\Interceptors\Interceptor.cs" />
+    <Compile Include="WinForms\Interceptors\Sanitizers\InputType.cs" />
+    <Compile Include="WinForms\Interceptors\Sanitizers\SanitizeBaseAttribute.cs" />
     <Compile Include="WinForms\InterProc\Helper.cs" />
     <Compile Include="WinForms\InterProc\ProcessArgumentAttribute.cs" />
     <Compile Include="Sample\DerivedForm.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="WinForms\Interceptors\Sanitizers\SanitizerTargetAttribute.cs" />
+    <Compile Include="WinForms\Interceptors\Sanitizers\SanitizeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
