--- a/DotNetSnipet/App.config
+++ b/DotNetSnipet/App.config
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="settings" type="Uzgoto.DotNetSnipet.WinForms.Messages.SettingsSection, DotNetSnipet"/>
+    <section name="applicationSettings" type="Uzgoto.DotNetSnipet.WinForms.Messages.ApplicationSettings, DotNetSnipet"/>
   </configSections>
 
   <startup> 
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.1"/>
   </startup>
 
-  <settings>
+  <applicationSettings>
     <messages>
       <add code="E0001" text="textmessgeerror" title="Error!" />
       <add code="W0001" text="textmessgewarining" title="Warn!" />
       <add code="I0001" text="textmessgeinfomation" title="Info" />
     </messages>
-  </settings>
+  </applicationSettings>
 </configuration>
