--- a/DotNetSnipet/CustomSettingsLoader/CustomSettingsLoader.csproj
+++ b/DotNetSnipet/CustomSettingsLoader/CustomSettingsLoader.csproj
@@ -4,14 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{5411DE7C-5EC0-40B1-AC88-FA74A88BC033}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Uzgoto.DotNetSnipet</RootNamespace>
-    <AssemblyName>DotNetSnipet</AssemblyName>
+    <ProjectGuid>{C119CE01-94DE-4B9A-92B8-C27D83821AC3}</ProjectGuid>
+    <OutputType>WinExe</OutputType>
+    <RootNamespace>Uzgoto.DotNetSnipet.CustomSettingsLoader</RootNamespace>
+    <AssemblyName>CustomSettingsLoader</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -36,45 +35,45 @@
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Deployment" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Net.Http" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\DbContext.cs" />
-    <Compile Include="Data\IDbContext.cs" />
+    <Compile Include="Messages\IMessage.cs" />
+    <Compile Include="Messages\Level.cs" />
+    <Compile Include="Messages\Message.cs" />
+    <Compile Include="Messages\MessageProvider.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\Repository.cs" />
-    <Compile Include="Sample\Program.cs" />
-    <Compile Include="WinForms\Extensions\WinFormsExtensions.cs" />
-    <Compile Include="WinForms\BaseForm.cs">
-      <SubType>Form</SubType>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <Compile Include="Properties\Resources.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="WinForms\BaseForm.Designer.cs">
-      <DependentUpon>BaseForm.cs</DependentUpon>
+    <None Include="Properties\Settings.settings">
+      <Generator>SettingsSingleFileGenerator</Generator>
+      <LastGenOutput>Settings.Designer.cs</LastGenOutput>
+    </None>
+    <Compile Include="Properties\Settings.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Settings.settings</DependentUpon>
+      <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="WinForms\Interceptors\IInterceptor.cs" />
-    <Compile Include="WinForms\Interceptors\InterceptAttribute.cs" />
-    <Compile Include="WinForms\Interceptors\Interceptor.cs" />
-    <Compile Include="WinForms\Interceptors\Sanitizers\InputType.cs" />
-    <Compile Include="WinForms\Interceptors\Sanitizers\SanitizeBaseAttribute.cs" />
-    <Compile Include="WinForms\InterProc\Helper.cs" />
-    <Compile Include="WinForms\InterProc\ProcessArgumentAttribute.cs" />
-    <Compile Include="Sample\DerivedForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WinForms\Interceptors\Sanitizers\SanitizeAttribute.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config">
-      <SubType>Designer</SubType>
-    </None>
+    <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
