fixed assembly name in custom section

--- a/DotNetSnipet/CustomSettingsLoader/App.config
+++ b/DotNetSnipet/CustomSettingsLoader/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="applicationSettings" type="Uzgoto.DotNetSnipet.WinForms.Messages.ApplicationSettings, DotNetSnipet"/>
+    <section name="applicationSettings" type="Uzgoto.DotNetSnipet.CustomSettingsLoader.Messages.ApplicationSettings, CustomSettingsLoader"/>
   </configSections>
 
   <startup>
