rename project name

--- a/Settings/App.config
+++ b/Settings/App.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-    <section name="applicationSettings" type="Uzgoto.DotNetSnipet.CustomSettingsLoader.Messages.ApplicationSettings, CustomSettingsLoader"/>
+    <section name="applicationSettings" type="Uzgoto.DotNetSnipet.Settings.ApplicationSettings, Settings"/>
   </configSections>
 
   <startup>
@@ -10,6 +10,7 @@
 
   <applicationSettings>
     <messages>
+      <clear />
       <add code="E0001" text="textmessgeerror" title="Error!" />
       <add code="W0001" text="textmessgewarining" title="Warn!" />
       <add code="I0001" text="textmessgeinfomation" title="Info" />
