--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{5411DE7C-5EC0-40B1-AC88-FA74A88BC033}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Uzgoto.DotNetSnipet</RootNamespace>
-    <AssemblyName>DotNetSnipet</AssemblyName>
+    <RootNamespace>Uzgoto.DotNetSnipet.Data</RootNamespace>
+    <AssemblyName>Data</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -46,10 +46,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Data\DbContext.cs" />
-    <Compile Include="Data\IDbContext.cs" />
+    <Compile Include="DbContext.cs" />
+    <Compile Include="IDbContext.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repository\Repository.cs" />
+    <Compile Include="Repository\RepositoryBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config">
