--- a/Services/Serivces.csproj
+++ b/Services/Serivces.csproj
@@ -29,9 +29,14 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -41,13 +46,36 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="SafeShutdownSerivceBase.cs">
-      <SubType>Component</SubType>
-    </Compile>
-    <Compile Include="Service1.cs">
-      <SubType>Component</SubType>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafeShutdownableServiceBase.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SafeShutdownableServiceBase.Designer.cs">
+      <DependentUpon>SafeShutdownableServiceBase.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SampleService.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SampleServicetmp.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SampleServiceInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="SampleServiceInstaller.Designer.cs">
+      <DependentUpon>SampleServiceInstaller.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="SafeShutdownableServiceBase.resx">
+      <DependentUpon>SafeShutdownableServiceBase.cs</DependentUpon>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Settings\Settings.csproj">
+      <Project>{c119ce01-94de-4b9a-92b8-c27d83821ac3}</Project>
+      <Name>Settings</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
