--- a/WinApiWrapper/WinApiWrapper.csproj
+++ b/WinApiWrapper/WinApiWrapper.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{35AD2CA6-75C7-4634-A0D0-25ED0519E6B0}</ProjectGuid>
     <OutputType>Library</OutputType>
-    <RootNamespace>Uzgoto.DotNet.Sandbox.WinApiWrapper</RootNamespace>
+    <RootNamespace>Uzgoto.Dotnet.Sandbox.Winapi</RootNamespace>
     <AssemblyName>WinApiWrapper</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Dialog.cs" />
     <Compile Include="Window.cs" />
     <Compile Include="Extensions.cs" />
   </ItemGroup>
