--- a/Services/Serivces.csproj
+++ b/Services/Serivces.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{664DBA0D-5ADB-43C0-A86D-52C71005C0E1}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Uzgoto.DotNetSnipet.Services</RootNamespace>
     <AssemblyName>Serivces</AssemblyName>
@@ -46,16 +46,37 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Program.cs" />
+    <Compile Include="ProjectInstaller.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="ProjectInstaller.Designer.cs">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SampleService.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="SampleServiceInstaller.cs">
+    <Compile Include="SampleService.Designer.cs">
+      <DependentUpon>SampleService.cs</DependentUpon>
+    </Compile>
+    <Compile Include="SampleServiceTmp.cs">
       <SubType>Component</SubType>
     </Compile>
-    <Compile Include="SampleServiceInstaller.Designer.cs">
-      <DependentUpon>SampleServiceInstaller.cs</DependentUpon>
+    <Compile Include="SampleServiceTmpInstaller.cs">
+      <SubType>Component</SubType>
     </Compile>
+    <Compile Include="SampleServiceTmpInstaller.Designer.cs">
+      <DependentUpon>SampleServiceTmpInstaller.cs</DependentUpon>
+    </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="ProjectInstaller.resx">
+      <DependentUpon>ProjectInstaller.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="SampleService.resx">
+      <DependentUpon>SampleService.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
