--- a/WinApiWrapper/WinApiWrapper.csproj
+++ b/WinApiWrapper/WinApiWrapper.csproj
@@ -49,7 +49,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dialog.cs" />
     <Compile Include="Window.cs" />
-    <Compile Include="Extensions.cs" />
+    <Compile Include="ApiWrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
