--- a/WinApiWrapper/WinApiWrapper.csproj
+++ b/WinApiWrapper/WinApiWrapper.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{35AD2CA6-75C7-4634-A0D0-25ED0519E6B0}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <RootNamespace>Uzgoto.Dotnet.Sandbox.Winapi</RootNamespace>
     <AssemblyName>WinApiWrapper</AssemblyName>
     <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
@@ -46,6 +46,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Desktop.cs" />
+    <Compile Include="WindowStation.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Dialog.cs" />
     <Compile Include="Window.cs" />
